[gd_scene load_steps=3 format=3 uid="uid://cw4bg78kfa3kc"]

[ext_resource type="Script" uid="uid://w0wbthi0mja6" path="res://scenes/game_scene/levels/level_ui.gd" id="1_1tdgt"]
[ext_resource type="Script" uid="uid://dkn8d6xrbenv8" path="res://test/hp_bar.gd" id="1_2k16x"]

[node name="LevelUI" type="CanvasLayer"]
script = ExtResource("1_1tdgt")

[node name="HealthBars" type="VBoxContainer" parent="."]
offset_right = 252.0
offset_bottom = 72.0

[node name="hp_bar" type="ProgressBar" parent="HealthBars"]
self_modulate = Color(0, 1, 0, 1)
layout_mode = 2
value = 100.0
script = ExtResource("1_2k16x")

[node name="umbrella_bar" type="ProgressBar" parent="HealthBars"]
layout_mode = 2
value = 100.0
script = ExtResource("1_2k16x")

[node name="Buttons" type="HBoxContainer" parent="."]
modulate = Color(1, 1, 1, 0.5)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -284.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="prev_btn" type="Button" parent="Buttons"]
layout_mode = 2
text = "PREV"

[node name="restart_btn" type="Button" parent="Buttons"]
layout_mode = 2
text = "restart"

[node name="skip_btn" type="Button" parent="Buttons"]
layout_mode = 2
text = "SKIP"

[node name="pause_btn" type="Button" parent="Buttons"]
layout_mode = 2
text = "pause"

[node name="LevelLabel" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -270.0
offset_top = -30.0
grow_horizontal = 0
grow_vertical = 0
text = "Level 1"
horizontal_alignment = 2
